@@ -104,13 +104,14 @@ Miscellaneous
  * Tutorial modified slightly (added links to clarify hsql setup for hospital examples).
  
  * Fixed typo in ScriptProcessor (it logged failed script execution as failed script compilation).
+ 
 Bug Fixes
 =========
 
 SC66: Added support for setting ReplyToQueueName and ReplyToQueueManagerName by MqConnection. 
       Also suppressed the "MQJE001: Completion Code 2, Reason 2033" log statement. 
 
-SC69: Changes in removal of JVM shutdown hook.
+SC69: Changes in handling of the JVM shutdown hook.
 
 SC72: The value for mqContextUserAndPassword was not being set by MqConnection.
 
